<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/your_ip"
    />
<TextView
    android:id="@+id/ip_addressold"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    />
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/target_ip"
    />
<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:id="@+id/target"
    />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            >

    <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/callold"
    android:text="@string/call"
    android:layout_weight="1"
    />
<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/endold"
    android:text="@string/end"
    android:layout_weight="1"
    />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
        >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:id="@+id/incoming"
        android:text="@string/incoming_call"
        android:visibility="invisible"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:id="@+id/caller"
        android:visibility="invisible"
        />
    </LinearLayout>
<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pickup"
    android:text="@string/pickup"
    android:visibility="invisible"
    />

</LinearLayout>

