<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_weight="5"
            >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_call_from"
                android:textSize="28sp"
                android:gravity="center_horizontal"
                />
        <TextView
                android:id="@+id/new_call_ip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:gravity="center_horizontal"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:padding="25dip">
        <Button style="@style/DialpadButtonStyle" android:layout_height="match_parent" android:id="@+id/accept" android:text="@string/text_button_accept"/>
        <Button style="@style/DialpadButtonStyle" android:layout_height="match_parent" android:id="@+id/reject" android:text="@string/text_button_reject"/>

    </LinearLayout>



</LinearLayout>